src/test/ui/borrowck/borrow-raw-address-of-deref-mutability.stderr
error[E0596]: cannot borrow `*x` as mutable, as it is behind a `&` reference
  --> $DIR/borrow-raw-address-of-deref-mutability.rs:8:13
   |
LL |     let x = &0;
   |             -- help: consider changing this to be a mutable reference: `&mut 0`
LL | 
LL |     let q = &raw mut *x;
   |             ^^^^^^^^^^^ `x` is a `&` reference, so the data it refers to cannot be borrowed as mutable

error[E0596]: cannot borrow `*x` as mutable, as it is behind a `*const` pointer
  --> $DIR/borrow-raw-address-of-deref-mutability.rs:14:13
   |
LL |     let x = &0 as *const i32;
   |             -- help: consider changing this to be a mutable pointer: `&mut 0`
LL | 
LL |     let q = &raw mut *x;
   |             ^^^^^^^^^^^ `x` is a `*const` pointer, so the data it refers to cannot be borrowed as mutable

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0596`.
